--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "type": "module",
+  "scripts": {
+    "dev": "node src/main.js"
+  },
   "dependencies": {
-    "discord.js": "^14.15.2"
-  }
+    "discord.js": "^14.15.2",
+    "dotenv": "^16.4.5"
+  },
+  "license": "MIT"
 }
